--- a/lang/en.json
+++ b/lang/en.json
@@ -1,7 +1,40 @@
 {
-    "The :attribute must contain at least one letter.": "The :attribute must contain at least one letter.",
-    "The :attribute must contain at least one number.": "The :attribute must contain at least one number.",
-    "The :attribute must contain at least one symbol.": "The :attribute must contain at least one symbol.",
-    "The :attribute must contain at least one uppercase and one lowercase letter.": "The :attribute must contain at least one uppercase and one lowercase letter.",
-    "The given :attribute has appeared in a data leak. Please choose a different :attribute.": "The given :attribute has appeared in a data leak. Please choose a different :attribute."
+    "Dashboard": "Dashboard",
+    "You're logged in!": "You're logged in!",
+    "This is a secure area of the application. Please confirm your password before continuing.": "This is a secure area of the application. Please confirm your password before continuing.",
+    "Confirm": "Confirm",
+    "Forgot your password? No problem. Just let us know your email address and we will email you a password reset link that will allow you to choose a new one.": "Forgot your password? No problem. Just let us know your email address and we will email you a password reset link that will allow you to choose a new one.",
+    "Email Password Reset Link": "Email Password Reset Link",
+    "Remember me": "Remember me",
+    "Forgot your password?": "Forgot your password?",
+    "Log in": "Log in",
+    "Already registered?": "Already registered?",
+    "Register": "Register",
+    "Reset Password": "Reset Password",
+    "Thanks for signing up! Before getting started, could you verify your email address by clicking on the link we just emailed to you? If you didn't receive the email, we will gladly send you another.": "Thanks for signing up! Before getting started, could you verify your email address by clicking on the link we just emailed to you? If you didn't receive the email, we will gladly send you another.",
+    "A new verification link has been sent to the email address you provided during registration.": "A new verification link has been sent to the email address you provided during registration.",
+    "Resend Verification Email": "Resend Verification Email",
+    "Log Out": "Log Out",
+    "Whoops! Something went wrong.": "Whoops! Something went wrong.",
+    "Create New Super Admin": "Create New Super Admin",
+    "Create": "Create",
+    "Customers": "Customers",
+    "Labels": "Labels",
+    "Receiver_name": "Receiver Name",
+    "Receiver_address": "Receiver Address",
+    "Package Info": "Package Info",
+    "Import package(s)": "Import package(s)",
+    "Packages": "Packages",
+    "Pickup Planner": "Pickup Planner",
+    "Planned Pickups": "Planned Pickups",
+    "Depot Name": "Depot Name",
+    "Planned Pickup Date": "Planned Pickup Date",
+    "Show": "Show",
+    "Pickup": "Pickup",
+    "Package_name": "Package_name",
+    "Weight": "Weight",
+    "Measurements": "Measurements",
+    "Pickup Success": "Pickup Success",
+    "English": "English",
+    "Dutch": "Dutch"
 }
